Fixed redundant horizontal scroll on login page

--- a/Cloud.WebApi/Content/Site.css
+++ b/Cloud.WebApi/Content/Site.css
@@ -6,6 +6,8 @@
 
 .full-heigth { height: 100%; }
 
+.full-width { width: 100%; }
+
 .font-size-xs { font-size: 15px; }
 
 .font-size-m { font-size: 20px; }
